# de-zoomcamp

./: README.md  pyproject.toml
homework/01-docker-terraform/: homework.md  main.tf
homework/02-mage/: README.md
homework/02-mage/green_taxi_etl/data_exporters/: export_green_taxi_data.py  export_green_taxi_data_gcs.py
homework/02-mage/green_taxi_etl/data_loaders/: load_green_taxi_data.py
homework/02-mage/green_taxi_etl/pipelines/green_taxi_etl/: metadata.yaml
homework/02-mage/green_taxi_etl/transformers/: transform_green_taxi_data.py
homework/03-bigquery-data-warehouse/: README.md  README_fhv_data.md  README_green_data.md  big_query_hw.sql  web_to_gcs.py
homework/03-data-ingestion-dlt-workshop/: dlt.md  homework_starter.ipynb
homework/04-analytics-engineering-dbt/: homework.md  tmp.sql
lectures/week_1_2_basics_n_setup/: Dockerfile  README.md  upload-data.ipynb
lectures/week_1_2_basics_n_setup/docker_sql/: Dockerfile  README.md  docker-compose.yaml  ingest_data.py  pipeline.py  upload-data.ipynb
lectures/week_3-data-warehouse-bigquery/: README.md  web_to_gcs.py
lectures/week_4-analytics-engineering-dbt/: README.md  big_query.sql
lectures/workshop_1_data_ingestion/: README.md
lectures/workshop_data_ingestion/: README.md
