[tool.poetry]
name = "de-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Toms Kursits <toms.kursits@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pgcli = "^4.0.1"
jupyter = "^1.0.0"
pandas = "^2.2.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
dlt = {extras = ["duckdb"], version = "^0.4.2"}
pyarrow = "^15.0.0"
google-cloud-storage = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
